--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "server": "node index.js",
-    "test": "mocha tests",
-    "coverage": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- -R spec tests"
+    "test": "mocha ./tests/**/*.js",
+    "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha -- -R spec ./tests/**/*.js"
   },
   "config": {
     "blanket": {
