--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "devDependencies": {
     "expect.js": "^0.3.1",
+    "gulp": "^3.8.11",
+    "gulp-autoprefixer": "^2.2.0",
+    "gulp-livereload": "^3.8.0",
+    "gulp-sass": "^1.3.3",
     "istanbul": "^0.3.13",
     "mocha": "^2.2.4",
     "mock-fs": "^2.5.0"
