--- a/package.json
+++ b/package.json
@@ -4,19 +4,13 @@
   "description": "KPI Campus frontend",
   "main": "index.js",
   "scripts": {
-    "server": "node index.js",
-    "test": "mocha ./tests/**/*.js",
-    "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha -- -R spec ./tests/**/*.js"
+    "server": "node index.js"
   },
   "devDependencies": {
-    "expect.js": "^0.3.1",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.2.0",
     "gulp-livereload": "^3.8.0",
-    "gulp-sass": "^1.3.3",
-    "istanbul": "^0.3.13",
-    "mocha": "^2.2.4",
-    "mock-fs": "^2.5.0"
+    "gulp-sass": "^1.3.3"
   },
   "dependencies": {
     "mime": "^1.3.4",
