--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "mime": "^1.3.4",
-    "nunjucks": "^1.3.3"
+    "nunjucks": "^1.3.3",
+    "sequelize": "^2.1.0",
+    "tedious": "^1.11.0"
   }
 }
