--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "gulp-sass": "^1.3.3"
   },
   "dependencies": {
+    "bcryptjs": "^2.1.0",
+    "glob": "^5.0.5",
     "mime": "^1.3.4",
     "nunjucks": "^1.3.3",
     "sequelize": "^2.1.0",
