--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
    },
 
    "rules": {
-      "comma-dangle": 1,
+      "comma-dangle": 0,
       "no-cond-assign": 2,
       "no-constant-condition": 1,
       "no-dupe-args": 2,
@@ -103,8 +103,8 @@
       "eol-last": 1,
       "func-names": 0,
       "func-style": [1, "expression"],
-      "key-spacing": [1, { "beforeColon": false, "afterColon": true }],
-      "new-cap": 1,
+      "key-spacing": 0,
+      "new-cap": 0,
       "no-array-constructor": 1,
       "no-inline-comments": 1,
       "no-lonely-if": true,
